--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'com.jakewharton.butterknife'
     id 'kotlin-android'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -25,6 +26,9 @@ android {
         versionName "2.3.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField 'String', 'LPP_API_KEY', lpp_api_key
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -40,6 +44,20 @@ android {
     }
 
     namespace 'com.VegaSolutions.lpptransit'
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.1'
+    }
+    packaging {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 
 }
 
@@ -53,24 +71,62 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.2'
+    implementation 'androidx.activity:activity-compose:1.9.0'
+    implementation platform('androidx.compose:compose-bom:2024.06.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.6.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.google.firebase:firebase-analytics:22.0.2'
-    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'biz.laenger.android:vpbs:0.0.5'
     implementation 'com.google.android.gms:play-services-location:21.3.0'
     implementation 'androidx.webkit:webkit:1.11.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation "androidx.compose.ui:ui-text-google-fonts:1.6.8"
+
+    def nav_version = "2.7.7"
+
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "androidx.compose.material3:material3:1.2.1"
+
+
+    def ktor_version = "2.3.12"
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+    implementation "io.ktor:ktor-client-okhttp:$ktor_version"
+    implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
+    implementation "io.ktor:ktor-serialization-gson:$ktor_version"
+
+    implementation 'io.arrow-kt:arrow-core:1.2.4'
+    implementation 'io.arrow-kt:arrow-fx-coroutines:1.2.4'
+
+
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation group: 'joda-time', name: 'joda-time', version: '2.10.5'
+    androidTestImplementation platform('androidx.compose:compose-bom:2024.06.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
     // Kotlin
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // Arrow
+    implementation 'io.arrow-kt:arrow-core:1.2.4'
+    implementation 'io.arrow-kt:arrow-fx-coroutines:1.2.4'
+
+    // Crash
+    implementation(platform("com.google.firebase:firebase-bom:33.1.1"))
+    implementation("com.google.firebase:firebase-crashlytics")
+    implementation("com.google.firebase:firebase-analytics")
 }
 
 apply plugin: 'com.google.gms.google-services'
