--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
+    <uses-permission
+        android:name="com.google.android.gms.permission.AD_ID"
+        tools:node="remove" />
 
     <application
         android:name=".TravanaApp"
@@ -16,6 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/WhiteTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".neoui.HomeActivity"
+            android:exported="true"
+            android:label="@string/title_activity_home"
+            android:theme="@style/WhiteTheme" />
         <activity
             android:name=".ui.activities.WebViewActivity"
             android:screenOrientation="portrait"
@@ -30,14 +37,13 @@
         <activity
             android:name=".ui.activities.DepartureActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.activities.RouteActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.MainActivity"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,7 +60,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
