--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,15 +12,15 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
-    kotlin {
-        jvmToolchain(17)
+    kotlinOptions {
+        jvmTarget = "17"
     }
 
     defaultConfig {
-        compileSdk 34
+        compileSdk 36
         applicationId "com.VegaSolutions.lpptransit"
         minSdkVersion 21
-        targetSdkVersion 34
+        targetSdkVersion 36
         versionCode 55
         versionName "2.3.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,38 +40,40 @@ android {
     }
 
     namespace 'com.VegaSolutions.lpptransit'
+    buildFeatures {
+        buildConfig true
+    }
 
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'com.google.android.gms:play-services-maps:19.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.9.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.9.2'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test:runner:1.6.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'com.github.andrefrsousa:SuperBottomSheet:1.3.0'
     implementation 'com.github.zagum:Android-ExpandIcon:1.2.1'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
-    implementation 'com.google.firebase:firebase-analytics:21.5.1'
-    implementation 'com.google.code.gson:gson:2.10'
-    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.google.code.gson:gson:2.13.1'
+    implementation 'com.google.maps.android:android-maps-utils:3.14.0'
     implementation 'biz.laenger.android:vpbs:0.0.5'
-    implementation 'com.google.android.gms:play-services-location:21.1.0'
-    implementation 'androidx.webkit:webkit:1.10.0'
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+    implementation 'androidx.webkit:webkit:1.14.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    implementation group: 'joda-time', name: 'joda-time', version: '2.10.5'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+    implementation 'com.squareup.okhttp3:okhttp:5.1.0'
+    implementation group: 'joda-time', name: 'joda-time', version: '2.14.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 
     // Kotlin
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.16.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
