--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,12 +88,14 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation "androidx.compose.material3:material3:1.2.1"
     implementation "androidx.compose.material:material-icons-extended"
+    implementation "androidx.compose.runtime:runtime-livedata"
 
     def ktor_version = "2.3.12"
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-okhttp:$ktor_version"
     implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
     implementation "io.ktor:ktor-serialization-gson:$ktor_version"
+    implementation "io.ktor:ktor-client-logging:$ktor_version"
 
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     androidTestImplementation platform('androidx.compose:compose-bom:2024.06.00')
